i think im done

--- a/business/index.html
+++ b/business/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="main__player">
                     <a class="main__play-button"></a>
-                    <video src="/business/video/association.m4v"></video>
+                    <video src="/business/video/association.m4v" poster="/business/img/poster.png"></video>
                 </div>
             </div>
             <div class="main__text">
