--- a/business/index.html
+++ b/business/index.html
@@ -16,7 +16,7 @@
                 <div class="header__logo-container">
                     <div class="header__logo-wrapper">
                         <img src="/business/img/gerb.png" alt="gerb">
-                        <span>Ассоциация<br> развития и поддержки предпренимательства</span>
+                        <span>Ассоциация<br> развития и поддержки предпринимательства</span>
                         <div class="header__skew blue"></div>
                         <div class="header__skew red"></div>
                     </div>
@@ -222,7 +222,7 @@
                 <div class="footer__logo-container">
                     <div class="footer__logo-wrapper">
                         <img src="/business/img/gerb.png" alt="gerb">
-                        <span>Ассоциация<br> развития и поддержки предпренимательства</span>
+                        <span>Ассоциация<br> развития и поддержки предпринимательства</span>
                         <div class="footer__skew blue"></div>
                         <div class="footer__skew red"></div>
                     </div>
