--- a/business/index.html
+++ b/business/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="/business/fonts/lato.css">
     <link rel="stylesheet" href="/business/css/style.css">
@@ -229,12 +230,20 @@
                     <span>Официальный сайт</span>
                 </div>
                 <div class="header__contacts">
+                    <div class="footer__social">
+                        <a href="https://vk.com/rutend123" target="_blank"><i class="fa fa-vk"></i></a> 
+                        <a href="#" target="_blank"><i class="fa fa-facebook-f"></i></a> 
+                        <a href="https://twitter.com/Rutend2" target="_blank"><i class="fa fa-twitter"></i></a> 
+                        <a href="https://ok.ru/group/62614086287413" target="_blank"><i class="fa fa-odnoklassniki"></i></a> 
+                        <a href="https://www.youtube.com/watch?v=n1t_YxZYApw&amp;t=36s" target="_blank"><i class="fa fa-youtube"></i></a> 
+                        <a href="https://www.instagram.com/__rutend__/" target="_blank"><i class="fa fa-instagram"></i></a> 
+                    </div>
                     <a class="header__phone" href="tel:88005501613">8 (800) 550 16 13</a>
                     <a class="header__recall" href="#">Заказать звонок</a>
                 </div>
             </div>
             <div class="footer__policy">
-                <span>Группа компаний Rutend 2012-2020</span>
+                <span>Ассоциация развития и поддержки предпринимательства 2010-2020</span>
             </div>
         </div>
     </footer>
