--- a/business/purchise.html
+++ b/business/purchise.html
@@ -159,6 +159,18 @@
                     <p class="aside__news-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa magni rem inventore mollitia assumenda laborum eligendi odit quaerat rerum suscipit at earum consectetur ducimus architecto, autem quis esse facere cumque!</p>
                     <a href="#" class="aside__about">подробнее ></a>
                 </div>
+                <div class="aside__news-item">
+                    <span class="aside__date">30.04.2020</span>
+                    <h3 class="aside__header">Топ-10 регионов увеличили на 12% госзакупки у малого бизнеса</h3>
+                    <p class="aside__news-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa magni rem inventore mollitia assumenda laborum eligendi odit quaerat rerum suscipit at earum consectetur ducimus architecto, autem quis esse facere cumque!</p>
+                    <a href="#" class="aside__about">подробнее ></a>
+                </div>
+                <div class="aside__news-item">
+                    <span class="aside__date">30.04.2020</span>
+                    <h3 class="aside__header">Топ-10 регионов увеличили на 12% госзакупки у малого бизнеса</h3>
+                    <p class="aside__news-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa magni rem inventore mollitia assumenda laborum eligendi odit quaerat rerum suscipit at earum consectetur ducimus architecto, autem quis esse facere cumque!</p>
+                    <a href="#" class="aside__about">подробнее ></a>
+                </div>
                 <a href="#" class="button">все новости</a>
             </div>
         </aside>
@@ -211,6 +223,7 @@
                         <div class="main__tender-bottom">
                             <div class="main__tender-bottom-head">
                                 <p class="main__text">Российская Федерация, 129090, Москва,площадь Сухаревская Б., 3</p>
+                                <a href="#" class="main__tender-documents"><span>Документы закупки</span></a>
                             </div>
                             <div class="main__tender-bottom-footer">
                                 <div class="main__tender-bottom-item">
@@ -243,6 +256,7 @@
                         <div class="main__tender-bottom">
                             <div class="main__tender-bottom-head">
                                 <p class="main__text">Российская Федерация, 129090, Москва,площадь Сухаревская Б., 3</p>
+                                <a href="#" class="main__tender-documents"><span>Документы закупки</span></a>
                             </div>
                             <div class="main__tender-bottom-footer">
                                 <div class="main__tender-bottom-item">
@@ -275,6 +289,7 @@
                         <div class="main__tender-bottom">
                             <div class="main__tender-bottom-head">
                                 <p class="main__text">Российская Федерация, 129090, Москва,площадь Сухаревская Б., 3</p>
+                                <a href="#" class="main__tender-documents"><span>Документы закупки</span></a>
                             </div>
                             <div class="main__tender-bottom-footer">
                                 <div class="main__tender-bottom-item">
@@ -307,6 +322,7 @@
                         <div class="main__tender-bottom">
                             <div class="main__tender-bottom-head">
                                 <p class="main__text">Российская Федерация, 129090, Москва,площадь Сухаревская Б., 3</p>
+                                <a href="#" class="main__tender-documents"><span>Документы закупки</span></a>
                             </div>
                             <div class="main__tender-bottom-footer">
                                 <div class="main__tender-bottom-item">
@@ -339,6 +355,7 @@
                         <div class="main__tender-bottom">
                             <div class="main__tender-bottom-head">
                                 <p class="main__text">Российская Федерация, 129090, Москва,площадь Сухаревская Б., 3</p>
+                                <a href="#" class="main__tender-documents"><span>Документы закупки</span></a>
                             </div>
                             <div class="main__tender-bottom-footer">
                                 <div class="main__tender-bottom-item">
@@ -371,6 +388,7 @@
                         <div class="main__tender-bottom">
                             <div class="main__tender-bottom-head">
                                 <p class="main__text">Российская Федерация, 129090, Москва,площадь Сухаревская Б., 3</p>
+                                <a href="#" class="main__tender-documents"><span>Документы закупки</span></a>
                             </div>
                             <div class="main__tender-bottom-footer">
                                 <div class="main__tender-bottom-item">
