Page sertificates done

--- a/business/sertificates.html
+++ b/business/sertificates.html
@@ -237,6 +237,12 @@
             </div>
         </div>
     </footer>
+    <div class="popup">
+        <div class="popup__wrap">
+            <img src="" alt="Big sertificate">
+            <i class="fa fa-times"></i>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="/business/js/main.js"></script>
