--- a/rutend/index.html
+++ b/rutend/index.html
@@ -423,7 +423,10 @@
 										</div>
 									</div>
 									<div class="form__field">
-										<p class="form__title">Прикрепить файл (до 5 мгб)</p>
+										<div class="form__title">
+											<p class="form__title">Прикрепить файл</p>
+											<p class="form__subtitle">(документация тендера, договор, смета и прочие)</p>
+										</div>
 										<div class="form__input">
 											<label class="file__label"><input class="form__file-input" name="file" type="file"><span title="" class="form__path"></span><span class="form__find">Обзор</span></label>
 										</div>
