--- a/main_rutend/index.html
+++ b/main_rutend/index.html
@@ -395,11 +395,12 @@
 									<div class="block__img-wrap">
 										<img src="/rutend/images/ward.png" alt="partner">
 									</div>
-									<p class="block__caption">Состоим в <br><a href="#" class="block__link">Торгово-промышленной палате</a> РФ</p>
+									<p class="block__caption">Состоим в <br><a href="#" class="block__link">Торгово-промышленной палате</a> Российской Федерации</p>
 								</div>
 								<div class="block__item">
 									<div class="block__img-wrap">
-										<img src="/rutend/images/minestry.png" alt="partner">
+										<img src="/rutend/images/minestry.jpg" alt="partner">
+										<p>Министерство цифрового развития, связи и массовых коммуникаций Российской Федерации</p>
 									</div>
 									<p class="block__caption">Имеем <a href="#" class="block__link">аккредитацию и числимся в реестре</a> Министерства цифрового развития, связи и массовых коммуникаций Российской Федерации.</p>
 								</div>
