--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -25,6 +25,13 @@
                     <a href="tel:84959757763" class="header__contact">8 (495) 975-77-63</a>
                     <a href="#" class="header__contact">Обратный звонок <img src="/cleanback/svg/phone-holding.svg" alt="svg"></a>
                 </div>
+                <div class="header__logo">
+                    <img src="/cleanback/img/logo.png" alt="Mobile Logo">
+                </div>
+                <a href="#" class="header__burger"><span></span></a>
+                <div class="mobile__menu">
+
+                </div>
             </div>
         </div>
     </header>
@@ -101,6 +108,10 @@
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker1.png" alt="Sneaker BG" class="service__bg">
+                                <div class="service__mobile">
+                                    <img src="/cleanback/img/1.png" alt="sneaker" class="service__sneaker">
+                                    <img src="/cleanback/svg/star.svg" alt="figure" class="service__figure">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -136,6 +147,10 @@
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker2.png" alt="Sneaker BG" class="service__bg">
+                                <div class="service__mobile">
+                                    <img src="/cleanback/img/2.png" alt="sneaker" class="service__sneaker">
+                                    <img src="/cleanback/svg/circle.svg" alt="figure" class="service__figure">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -172,6 +187,10 @@
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker3.png" alt="Sneaker BG" class="service__bg">
+                                <div class="service__mobile">
+                                    <img src="/cleanback/img/3.png" alt="sneaker" class="service__sneaker">
+                                    <img src="/cleanback/svg/snake.svg" alt="figure" class="service__figure">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -206,6 +225,10 @@
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker4.png" alt="Sneaker BG" class="service__bg">
+                                <div class="service__mobile">
+                                    <img src="/cleanback/img/4.png" alt="sneaker" class="service__sneaker">
+                                    <img src="/cleanback/svg/red.svg" alt="figure" class="service__figure">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -230,6 +253,10 @@
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker5.png" alt="Sneaker BG" class="service__bg">
+                                <div class="service__mobile">
+                                    <img src="/cleanback/img/5.png" alt="sneaker" class="service__sneaker">
+                                    <img src="/cleanback/svg/black.svg" alt="figure" class="service__figure">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -261,10 +288,8 @@
                         <span class="service__divide"></span>
                         <span class="service__total"></span>
                     </div>
-                    <div class="services__buttons">
-                        <a href="#" class="services__next"><i class="fa fa-arrow-up"></i></a>
-                        <a href="#" class="services__prev"><i class="fa fa-arrow-down"></i></a>
-                    </div>
+                    <a href="#" class="services__next"><i class="fa fa-arrow-up"></i></a>
+                    <a href="#" class="services__prev"><i class="fa fa-arrow-down"></i></a>
                 </div>
             </div>
         </div>
