--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -10,15 +10,15 @@
     <title>Cleanback - профессиональная химчистка обуви</title>
 </head>
 <body>
-    <header class="header">
+    <header id="header" class="header">
         <div class="container">
             <div class="header__content">
                 <nav class="header__nav">
                     <ul class="header__list">
-                        <li class="header__item"><a href="tel:84959757763" class="header__link">До и после</a></li>
-                        <li class="header__item"><a href="tel:84959757763" class="header__link">Услуги</a></li>
-                        <li class="header__item"><a href="tel:84959757763" class="header__link">Наши работы</a></li>
-                        <li class="header__item"><a href="tel:84959757763" class="header__link">О нас</a></li>
+                        <li class="header__item"><a href="#compare" class="header__link">До и после</a></li>
+                        <li class="header__item"><a href="#services" class="header__link">Услуги</a></li>
+                        <li class="header__item"><a href="#portfolio" class="header__link">Наши работы</a></li>
+                        <li class="header__item"><a href="#about" class="header__link">О нас</a></li>
                     </ul>
                 </nav>
                 <div class="header__contacts">
@@ -68,7 +68,7 @@
             </div>
         </div>
     </section>
-    <section class="compare">
+    <section id="compare" class="compare">
         <div id="compare-id" class="compare__slider">
             <!-- The before image is first -->
             <img class="compare__before" src="/cleanback/img/dirty_snkr.png" />
@@ -78,7 +78,7 @@
     </section>
     <section class="services">
         <div class="container">
-            <h3 class="section__title">Услуги</h3>
+            <h3 id="services" class="section__title">Услуги</h3>
             <div class="services__wrapper">
                 <div class="services__swiper">
                     <div class="swiper-wrapper">
@@ -296,7 +296,7 @@
     </section>
     <section class="portfolio">
         <div class="container">
-            <h3 class="section__title">Наши работы</h3>
+            <h3 id="portfolio" class="section__title">Наши работы</h3>
             <div class="portfolio__swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -344,7 +344,7 @@
         <div class="about__content">
             <div class="container">
                 <div class="about__body">
-                    <h3 class="section__title about__title">О нас</h3>
+                    <h3 id="about" class="section__title about__title">О нас</h3>
                     <p class="about__text">Хорошая обувь – это не тот предмет гардероба, который меняют каждый сезон. И первый шаг к тому, чтобы сэкономить и сохранить качество обуви – это именно грамотный и своевременный уход.
                         <br><br>
                         Неправильная чистка – хуже, чем ее отсутствие! Ничто не портит обувь так, как самостоятельные попытки избавиться от следов реагентов и прочих сложных загрязнителей.
@@ -357,7 +357,7 @@
             <img src="/cleanback/img/about_bg.png" alt="About BG" class="about__img">
         </div>
     </section>
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__logo">
@@ -367,11 +367,11 @@
                 <div class="footer__links">
                     <div class="footer__group">
                         <span class="footer__title">Меню</span>
-                        <a href="#" class="footer__link">Главная</a>
-                        <a href="#" class="footer__link">До и после</a>
-                        <a href="#" class="footer__link">Услуги</a>
-                        <a href="#" class="footer__link">Наши работы</a>
-                        <a href="#" class="footer__link">О нас</a>
+                        <a href="#header" class="footer__link">Главная</a>
+                        <a href="#compare" class="footer__link">До и после</a>
+                        <a href="#services" class="footer__link">Услуги</a>
+                        <a href="#portfolio" class="footer__link">Наши работы</a>
+                        <a href="#about" class="footer__link">О нас</a>
                     </div>
                     <div class="footer__wrap">
                         <div class="footer__group">
