--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="container">
             <div class="banner__links">
-                <a href="#" class="banner__scroll banner__link"><img src="/cleanback/svg/prioritize-down.svg" alt=""> scroll down</a>
+                <a href="#compare" class="banner__scroll banner__link"><img src="/cleanback/svg/prioritize-down.svg" alt="svg"> scroll down</a>
                 <div class="banner__social">
                     <a href="#" class="banner__link">facebook</a>
                     <a href="#" class="banner__link">instagram</a>
