--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -261,7 +261,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="service__wrap">
-                                <h4 class="service__title">Стандартная химчистка</h4>
+                                <h4 class="service__title">Дополнительные услуги</h4>
                                 <div class="service__features">
                                     <span class="service__feature">Сетка</span>
                                     <span class="service__feature">Замша</span>
@@ -278,6 +278,9 @@
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker6.png" alt="Sneaker BG" class="service__bg">
+                                <div class="service__mobile nosneaker">
+                                    <img src="/cleanback/img/sneaker6.png" alt="sneaker" class="service__sneaker">
+                                </div>
                             </div>
                         </div>
                     </div>
