--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -89,22 +89,15 @@
                                     <span class="service__feature">Ткань</span>
                                     <span class="service__feature">Резина</span>
                                 </div>
-                                <div class="service__list">
-                                    <ul class="service__group">
+                                <ul class="service__list">
                                         <li class="service__item">Химчистка обуви</li>
                                         <li class="service__item">Чистка боковой части подошвы</li>
                                         <li class="service__item">Химчистка внутреней части</li>
                                         <li class="service__item">Стирка шнурков</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Чистка стелек</li>
                                         <li class="service__item">Дезодарация обуви</li>
-                                        
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Исправление формы</li>
-                                    </ul>
-                                </div>
+                                </ul>
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker1.png" alt="Sneaker BG" class="service__bg">
@@ -123,27 +116,17 @@
                                     <span class="service__feature">Кожа</span>
                                     <span class="service__feature">Нубук</span>
                                 </div>
-                                <div class="service__list">
-                                    <ul class="service__group">
+                                <ul class="service__list">
                                         <li class="service__item">Химчистка обуви</li>
                                         <li class="service__item">Дополнительная химчистка</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Стирка шнурков</li>
                                         <li class="service__item">Чистка стелек</li>
                                         <li class="service__item">Удаление катышков</li>
                                         <li class="service__item">Восстановление формы</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Расчесывание и покрытие</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Химчистка внутреней части</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Дезодарация обуви</li>
-                                    </ul>
-                                </div>
+                                </ul>
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker2.png" alt="Sneaker BG" class="service__bg">
@@ -161,29 +144,19 @@
                                     <span class="service__feature">Кожа</span>
                                     <span class="service__feature">Нубук</span>
                                 </div>
-                                <div class="service__list">
-                                    <ul class="service__group">
+                                <ul class="service__list">
                                         <li class="service__item">Химчистка обуви</li>
                                         <li class="service__item">Выведение соли и реагентов</li>
                                         <li class="service__item">Дополнительная химчистка</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Стирка шнурков</li>
                                         <li class="service__item">Чистка стелек</li>
                                         <li class="service__item">Удаление катышков</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Расчесывание и покрытие</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Химчистка внутреней части</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Дезодарация обуви</li>
                                         <li class="service__item">Восстановление формы</li>
                                         <li class="service__item">Влагозащита</li>
-                                    </ul>
-                                </div>
+                                </ul>
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker3.png" alt="Sneaker BG" class="service__bg">
@@ -200,28 +173,18 @@
                                     <span class="service__feature">Замша</span>
                                     <span class="service__feature">Кожа</span>
                                 </div>
-                                <div class="service__list">
-                                    <ul class="service__group">
+                                <ul class="service__list">
                                         <li class="service__item">Химчистка обуви</li>
                                         <li class="service__item">Восстановление цвета замши</li>
                                         <li class="service__item">Дополнительная химчистка</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Удаление катышков</li>
                                         <li class="service__item">Стирка шнурков</li>
                                         <li class="service__item">Чистка стелек</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Расчесывание и покрытие</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Химчистка внутреней части</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Дезодарация обуви</li>
                                         <li class="service__item">Восстановление формы</li>
-                                    </ul>
-                                </div>
+                                </ul>
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker4.png" alt="Sneaker BG" class="service__bg">
@@ -239,47 +202,17 @@
                                     <span class="service__feature">Замша</span>
                                     <span class="service__feature">Кожа</span>
                                 </div>
-                                <div class="service__list">
-                                    <ul class="service__group">
+                                <ul class="service__list">
                                         <li class="service__item">Покраска обуви и ее отдельных частей</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Восстановление испортившихся элементов</li>
-                                    </ul>
-                                    <ul class="service__group">
                                         <li class="service__item">Прочие работы по рестоврации</li>
-                                    </ul>
-                                </div>
+                                </ul>
                                 <a href="" class="button service__button">Заказать</a>
                                 <span class="service__price">4520 руб.</span>
                                 <img src="/cleanback/img/sneaker5.png" alt="Sneaker BG" class="service__bg">
                                 <div class="service__mobile">
                                     <img src="/cleanback/img/5.png" alt="sneaker" class="service__sneaker">
                                     <img src="/cleanback/svg/black.svg" alt="figure" class="service__figure">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="service__wrap">
-                                <h4 class="service__title">Дополнительные услуги</h4>
-                                <div class="service__features">
-                                    <span class="service__feature">Сетка</span>
-                                    <span class="service__feature">Замша</span>
-                                    <span class="service__feature">Кожа</span>
-                                    <span class="service__feature">Нубук</span>
-                                    <span class="service__feature">Ткань</span>
-                                </div>
-                                <div class="service__list">
-                                    <ul class="service__group">
-                                        <li class="service__item">Водоотталкивающая пропитка</li>
-                                        <li class="service__item">Подклейка мысов</li>
-                                    </ul>
-                                </div>
-                                <a href="" class="button service__button">Заказать</a>
-                                <span class="service__price">4520 руб.</span>
-                                <img src="/cleanback/img/sneaker6.png" alt="Sneaker BG" class="service__bg">
-                                <div class="service__mobile nosneaker">
-                                    <img src="/cleanback/img/sneaker6.png" alt="sneaker" class="service__sneaker">
                                 </div>
                             </div>
                         </div>
@@ -291,8 +224,8 @@
                         <span class="service__divide"></span>
                         <span class="service__total"></span>
                     </div>
-                    <a href="#" class="services__next"><i class="fa fa-arrow-up"></i></a>
-                    <a href="#" class="services__prev"><i class="fa fa-arrow-down"></i></a>
+                    <a href="#" class="services__prev"><i class="fa fa-arrow-up"></i></a>
+                    <a href="#" class="services__next"><i class="fa fa-arrow-down"></i></a>
                 </div>
             </div>
         </div>
