--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -67,6 +67,9 @@
                 </div>
             </div>
         </div>
+        <div class="banner__abs-bg">
+            <img src="/cleanback/img/bgi.png" alt="BG">
+        </div>
     </section>
     <section id="compare" class="compare">
         <div id="compare-id" class="compare__slider">
