--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -68,7 +68,67 @@
             </div>
         </div>
         <div class="banner__abs-bg">
-            <img src="/cleanback/img/bgi.png" alt="BG">
+            <!-- <img src="/cleanback/img/bgi.png" alt="BG"> -->
+        </div>
+        <div class="form__wrapper">
+            <div class="form">
+                <div class="container">
+                    <div class="form__body">
+                        <div class="form__header">
+                            <h2 class="form__title">Оформление заказа</h2>
+                            <a class="form__close"><span></span></a>
+                        </div>
+                        <form class="form__form" action="#">
+                            <div class="form__content">
+                                <div class="form__col">
+                                    <div class="form__block">
+                                        <h4 class="form__subtitle">Вид чистки</h4>
+                                        <select name="cleaning_type" class="form__input">
+                                            <option value="classic">Классическая чистка</option>
+                                            <option value="classic">Классическая чистка</option>
+                                            <option value="classic">Классическая чистка</option>
+                                            <option value="classic">Классическая чистка</option>
+                                            <option value="classic">Классическая чистка</option>
+                                        </select>
+                                    </div>
+                                    <div class="form__block">
+                                        <h4 class="form__subtitle">Дополнительные опции</h4>
+                                        <div class="form__labels">
+                                            <label class="form__label"><input name="option" type="checkbox"><span class="form__check"></span> Подклейка мысов</label>
+                                            <label class="form__label"><input name="option" type="checkbox"><span class="form__check"></span> Водоотталкивающая пропитка</label>
+                                            <label class="form__label"><input name="option" type="checkbox"><span class="form__check"></span> Подклейка мысов</label>
+                                            <label class="form__label"><input name="option" type="checkbox"><span class="form__check"></span> Подклейка мысов</label>
+                                            <label class="form__label"><input name="option" type="checkbox"><span class="form__check"></span> Водоотталкивающая пропитка</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form__col">
+                                    <div class="form__block">
+                                        <h4 class="form__subtitle">Данные</h4>
+                                        <input class="form__input" name="name" placeholder="Имя" type="text">
+                                        <input class="form__input" name="telephone" placeholder="Телефон" type="tel">
+                                        <input class="form__input" name="adress" placeholder="Адресс" type="text">
+                                        <input class="form__input" name="promo" placeholder="Промокод" type="text">
+                                    </div>
+                                </div>
+                                <div class="form__col jssb">
+                                    <div class="form__block">
+                                        <h4 class="form__subtitle">Количество пар</h4>
+                                        <input class="form__input" value="1" placeholder="1" type="number">
+                                    </div>
+                                    <div class="form__order">
+                                        <div class="form__total">
+                                            <span>Итоговая цена:</span>
+                                            <span class="form__price">4520 руб.</span>
+                                        </div>
+                                        <a href="#" class="button form__button">Оформить заказ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="compare" class="compare">
