--- a/business/team.html
+++ b/business/team.html
@@ -137,13 +137,22 @@
             <div class="aside__partners">
                 <div class="aside__partners-wrap">
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="#" alt="partner">
+                        <img class="aside__partner-img" src="/business/img/partners/pertner1.png" alt="partner">
                     </div>
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="#" alt="partner">
+                        <img class="aside__partner-img" src="/business/img/partners/pertner2.png" alt="partner">
                     </div>
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="#" alt="partner">
+                        <img class="aside__partner-img" src="/business/img/partners/pertner3.png" alt="partner">
+                    </div>
+                    <div class="aside__partner">
+                        <img class="aside__partner-img" src="/business/img/partners/pertner4.png" alt="partner">
+                    </div>
+                    <div class="aside__partner">
+                        <img class="aside__partner-img" src="/business/img/partners/pertner5.png" alt="partner">
+                    </div>
+                    <div class="aside__partner">
+                        <img class="aside__partner-img" src="/business/img/partners/pertner6.png" alt="partner">
                     </div>
                 </div>
                 <a href="#" class="button">все партнеры</a>
@@ -151,23 +160,22 @@
             <div class="aside__sertificates">
                 <div class="aside__sertificates-wrap">
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="#" alt="sertificate">
+                        <img class="aside__sertificate-img" src="/business/img/sert1.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="#" alt="sertificate">
+                        <img class="aside__sertificate-img" src="/business/img/sert2.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="#" alt="sertificate">
+                        <img class="aside__sertificate-img" src="/business/img/sert3.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="#" alt="sertificate">
+                        <img class="aside__sertificate-img" src="/business/img/sert4.png" alt="sertificate">
                     </div>
                 </div>
                 <a href="#" class="button">все лицензии</a>
             </div>
         </aside>
         <main class="main bgw">
-
             <div class="main__picture">
                 <div class="main__zoom"><a href="#">Увеличенный просмотр<img src="/business/img/zoom.png" alt="Zoom"></a></div>
                 <div class="main__picture-wrap">
@@ -182,80 +190,139 @@
                     <img class="main__pic" src="/business/img/map.png" alt="">
                 </div>
             </div>
-
+            <h3 class="main__picture-title">Команда управления подразделениями</h3>
             <div class="main__team" data-mobile="false">
-                <h3 class="main__picture-title">Команда управления подразделениями</h3>
-                <div class="swiper-wraper">
+                <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Холодов Владимир Иванович</span>
+                                <span class="main__label">Генеральный директор</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89034111293" class="main__contact">+7-(903)-411-12-93</a></span>
+                                <span class="main__label">Email: <a href="mailto:kholodov@rutend.ru" class="main__contact">Kholodov@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Ефимович Ирина Геннадьевна</span>
+                                <span class="main__label">Коммерческий директор</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89615097588" class="main__contact">+7-(961)-509-75-88</a></span>
+                                <span class="main__label">Email: <a href="mailto:irina@rutend.ru" class="main__contact">irina@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Ершова наталья александровна</span>
+                                <span class="main__label">Руководитель отдела заключения договоров</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89676573143" class="main__contact">+7-(967)-657-31-43</a></span>
+                                <span class="main__label">Email: <a href="mailto:ershova@rutend.ru" class="main__contact">ershova@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Грант Кира николаевна</span>
+                                <span class="main__label">Руководитель отдела сопровождения</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89034111293" class="main__contact">+7-(903)-411-22-12</a></span>
+                                <span class="main__label">Email: <a href="mailto:kira@rutend.ru" class="main__contact">kira@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Иванов александр Владимирович</span>
+                                <span class="main__label">Руководитель Тендерного отдела</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89034112284" class="main__contact">+7-(903)-411-22-84</a></span>
+                                <span class="main__label">Email: <a href="mailto:aleksandr@rutend.ru" class="main__contact">aleksandr@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Гусенков сергей александрович</span>
+                                <span class="main__label">Руководитель Юридического отдела</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89604731083" class="main__contact">+7-(960)-473-10-83</a></span>
+                                <span class="main__label">Email: <a href="mailto:legal@rutend.ru" class="main__contact">legal@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Дорошенко Татьяна ивановна</span>
+                                <span class="main__label">Главный бухгалтер</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89604889477" class="main__contact">+7-(960)-488-94-77</a></span>
+                                <span class="main__label">Email: <a href="mailto:buh@rutend.ru" class="main__contact">buh@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Костецки Инна</span>
+                                <span class="main__label">Ведущий специалист государственных и коммерчиских закупок</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89676573144" class="main__contact">+7-(967)-657-31-44</a></span>
+                                <span class="main__label">Email: <a href="mailto:inna.k@rutend.ru" class="main__contact">inna.k@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Шконда анастасия владимировна</span>
+                                <span class="main__label">Ведущий специалист государственных закупок</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89676573145" class="main__contact">+7-(967)-657-31-45</a></span>
+                                <span class="main__label">Email: <a href="mailto:anastasia@rutend.ru" class="main__contact">anastasia@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Болдырев Дмитрий сергеевич</span>
+                                <span class="main__label">Руководитель отдела аналитики</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89034111292" class="main__contact">+7-(903)-411-12-92</a></span>
+                                <span class="main__label">Email: <a href="mailto:boldirev@rutend.ru" class="main__contact">boldirev@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Парсегов валерий артурович</span>
+                                <span class="main__label">Ведущий специалист управления проектами</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89034111249" class="main__contact">+7-(903)-411-12-49</a></span>
+                                <span class="main__label">Email: <a href="mailto:parsegov@rutend.ru" class="main__contact">parsegov@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="">
-                            <div class="main__contacts"></div>
+                            <img src="" alt="teammember">
+                            <div class="main__contacts">
+                                <span class="main__name">Сидоренко Юлия эдуардовна</span>
+                                <span class="main__label">HR-специалист</span>
+                                <span class="main__label">Моб. тел. <a href="tel:89615380705" class="main__contact">+7-(961)-538-07-05</a></span>
+                                <span class="main__label">Email: <a href="mailto:julia@rutend.ru" class="main__contact">julia@rutend.ru</a></span>
+                            </div>
                         </div>
                     </div>
                 </div>
