--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -148,26 +148,30 @@
                         <div class="swiper-slide">
                             <div class="service__wrap">
                                 <div class="service__content">
-                                    <h4 class="service__title">Классическая химчистка</h4>
+                                    <h4 class="service__title">Стандартная химчистка</h4>
                                     <div class="service__features">
-                                        <span class="service__feature">Ткань</span>
-                                        <span class="service__feature">Резина</span>
+                                        <span class="service__feature">Сетка</span>
+                                        <span class="service__feature">Замша</span>
+                                        <span class="service__feature">Кожа</span>
+                                        <span class="service__feature">Нубук</span>
                                     </div>
                                     <ul class="service__list">
                                             <li class="service__item">Химчистка обуви</li>
-                                            <li class="service__item">Чистка боковой части подошвы</li>
-                                            <li class="service__item">Химчистка внутреней части</li>
+                                            <li class="service__item">Дополнительная химчистка</li>
                                             <li class="service__item">Стирка шнурков</li>
                                             <li class="service__item">Чистка стелек</li>
+                                            <li class="service__item">Удаление катышков</li>
+                                            <li class="service__item">Восстановление формы</li>
+                                            <li class="service__item">Расчесывание и покрытие</li>
+                                            <li class="service__item">Химчистка внутреней части</li>
                                             <li class="service__item">Дезодарация обуви</li>
-                                            <li class="service__item">Исправление формы</li>
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker1.png" alt="Sneaker BG" class="service__bg">
+                                    <img src="/cleanback/img/sneaker2.png" alt="Sneaker BG" class="service__bg">
                                     <div class="service__mobile">
-                                        <img src="/cleanback/img/1.png" alt="sneaker" class="service__sneaker">
-                                        <img src="/cleanback/svg/star.svg" alt="figure" class="service__figure">
+                                        <img src="/cleanback/img/2.png" alt="sneaker" class="service__sneaker">
+                                        <img src="/cleanback/svg/circle.svg" alt="figure" class="service__figure">
                                     </div>
                                 </div>
                                 <div class="form">
@@ -231,30 +235,26 @@
                         <div class="swiper-slide">
                             <div class="service__wrap">
                                 <div class="service__content">
-                                    <h4 class="service__title">Стандартная химчистка</h4>
+                                    <h4 class="service__title">Классическая химчистка</h4>
                                     <div class="service__features">
-                                        <span class="service__feature">Сетка</span>
-                                        <span class="service__feature">Замша</span>
-                                        <span class="service__feature">Кожа</span>
-                                        <span class="service__feature">Нубук</span>
+                                        <span class="service__feature">Ткань</span>
+                                        <span class="service__feature">Резина</span>
                                     </div>
                                     <ul class="service__list">
                                             <li class="service__item">Химчистка обуви</li>
-                                            <li class="service__item">Дополнительная химчистка</li>
+                                            <li class="service__item">Чистка боковой части подошвы</li>
+                                            <li class="service__item">Химчистка внутреней части</li>
                                             <li class="service__item">Стирка шнурков</li>
                                             <li class="service__item">Чистка стелек</li>
-                                            <li class="service__item">Удаление катышков</li>
-                                            <li class="service__item">Восстановление формы</li>
-                                            <li class="service__item">Расчесывание и покрытие</li>
-                                            <li class="service__item">Химчистка внутреней части</li>
                                             <li class="service__item">Дезодарация обуви</li>
+                                            <li class="service__item">Исправление формы</li>
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker2.png" alt="Sneaker BG" class="service__bg">
+                                    <img src="/cleanback/img/sneaker1.png" alt="Sneaker BG" class="service__bg">
                                     <div class="service__mobile">
-                                        <img src="/cleanback/img/2.png" alt="sneaker" class="service__sneaker">
-                                        <img src="/cleanback/svg/circle.svg" alt="figure" class="service__figure">
+                                        <img src="/cleanback/img/1.png" alt="sneaker" class="service__sneaker">
+                                        <img src="/cleanback/svg/star.svg" alt="figure" class="service__figure">
                                     </div>
                                 </div>
                                 <div class="form">
@@ -656,11 +656,13 @@
                 <div class="footer__links">
                     <div class="footer__group">
                         <span class="footer__title">Меню</span>
-                        <a href="#header" class="footer__link">Главная</a>
-                        <a href="#compare" class="footer__link">До и после</a>
-                        <a href="#services" class="footer__link">Услуги</a>
-                        <a href="#portfolio" class="footer__link">Наши работы</a>
-                        <a href="#about" class="footer__link">О нас</a>
+                        <ul class="footer__list">
+                            <li><a href="#header" class="footer__link">Главная</a></li>
+                            <li><a href="#compare" class="footer__link">До и после</a></li>
+                            <li><a href="#services" class="footer__link">Услуги</a></li>
+                            <li><a href="#portfolio" class="footer__link">Наши работы</a></li>
+                            <li><a href="#about" class="footer__link">О нас</a></li>
+                        </ul>
                     </div>
                     <div class="footer__wrap">
                         <div class="footer__group">
@@ -681,12 +683,13 @@
             </div>
         </div>
     </footer>
-<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="/cleanback/js/jquery.event.move.js" type="text/javascript"></script>
-<script src="/cleanback/js/jquery.twentytwenty.js" type="text/javascript"></script>
-<link rel="stylesheet" href="css/twentytwenty.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-<script src="/cleanback/js/main.js"></script>
+
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="/cleanback/js/jquery.event.move.js" type="text/javascript"></script>
+    <script src="/cleanback/js/jquery.twentytwenty.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/twentytwenty.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <script src="/cleanback/js/main.js"></script>
 </body>
 </html>
